# fap2-studio-gtk

./: .fap2std_vimprj  .gitignore  AUTHORS  ChangeLog  Makefile.am  configure.ac  gdb_set
debian/: changelog  control  copyright  fap-studio-gtk.install  files  rules
doc/design/: fap2_studio_gtk_design.xml  index.html
doc/requirements/: fap2_studio_gtk_req.xml  index.html
etc/: reg.rc
examples/: daa_func_var_1.xml  daa_incaps.xml  daa_simple.xml  daa_syst.xml  des1.xml  des_1.xml  des_var_1.xml  des_var_1_phd.xml  des_var_1mc.xml  des_var_c1.xml  des_var_vect_1.xml  des_var_vect_1_phd.xml  func_1.xml  func_conv.xml  func_if_given_res_type.xml  func_var_1.xml  func_var_1_phd.xml  func_var_1mc.xml  func_var_2.xml  func_var_at_vect.xml  func_var_enum_1.xml  func_var_enum_2.xml  func_var_gen_1.xml  func_var_gen_mtr.xml  func_var_tuple_1.xml  func_var_vect_mpl_1.xml  incaps_1.xml  incaps_1_mc.xml  incaps_2.xml  rock_1.xml  rock_1_tmp.xml  rock_2.xml  rock_al.xml  rock_al_bug.xml  rock_al_vis.xml  rock_al_vis_1.xml  rock_al_vis_phd.xml  rock_al_vis_phd_mc.xml  simple_elem.xml  simple_elem_err.xml  (+9 more)
modules/: simple_vis.xml
src/: Makefile.am  app.cpp  app.h  chromoview.cpp  chromoview.h  cntview.cpp  cntview.h  common.h  cpcrp.cpp  cpcrp.h  cperp.cpp  cperp.h  datacrp.cpp  datacrp.h  dessrv.cpp  dessrv.h  dessync.cpp  dessync.h  desvis.cpp  desvis.h  dlgbase.cpp  dlgbase.h  edgecrp.cpp  edgecrp.h  elemcomprp.cpp  elemcomprp.h  elemdetrp.cpp  elemdetrp.h  extdcrp.cpp  extdcrp.h  fap2-studio-gtk  hierdetailview.cpp  hierdetailview.h  incapscrp.cpp  incapscrp.h  incapsdrp.cpp  incapsdrp.h  logview.cpp  logview.h  main.cpp  (+32 more)
templates/: des.xml  empty.xml  incaps.xml  simple.xml
tests/: test_compact_1.xml  test_compact_1_res.xml  test_fap2_vis_1.xml  test_mut_dep_1.xml  test_mut_dep_2.xml  test_mut_dep_add_node.xml  test_mut_dep_add_node_1.xml  test_mut_dep_parent_1.xml  test_posinvar_1.xml  test_posinvar_prnt.xml  test_reduced_func_1.xml
