SUBDIRS = src

iconsdir = $(pkgdatadir)/icons
dist_icons_DATA = \
	     img/tbar_btn_run.png \
	     img/tbar_btn_pause.png \
	     img/tbar_btn_stop.png \
	     img/tbar_btn_start.png \
	     img/tbar_btn_step.png

vconfdir = $(pkgdatadir)/conf
dist_vconf_DATA = \
	     etc/reg.rc

templdir = $(pkgdatadir)/templ
dist_templ_DATA = \
	     templates/empty.xml \
	     templates/simple.xml

examplesdir = $(pkgdatadir)/examples
dist_examples_DATA = \
	     examples/simple_elem.xml \
	     examples/simple_vert.xml \
	     examples/syst_1.xml

EXTRA_DIST = \
	     img/tbar_btn_run.png \
	     img/tbar_btn_pause.png \
	     img/tbar_btn_stop.png \
	     img/tbar_btn_start.png \
	     img/tbar_btn_step.png \
	     templates/empty.xml
	     etc/reg.rc
	

