AM_CPPFLAGS = -D_PLAT_LINUX_ -g -O2

bin_PROGRAMS = fap2-studio-gtk

fap2_studio_gtk_SOURCES = \
		 main.cpp \
		 common.h \
		 app.h \
		 app.cpp \
		 hierdetailview.h \
		 hierdetailview.cpp \
		 elemdetrp.h \
		 elemdetrp.cpp \
		 elemcomprp.h \
		 elemcomprp.cpp \
		 toolitems.h \
		 toolitems.cpp \
		 mainwnd.h \
		 mainwnd.cpp




