AM_CPPFLAGS = -D_PLAT_LINUX_ -g -O2

bin_PROGRAMS = fap2-studio-gtk

fap2_studio_gtk_SOURCES = \
		 main.cpp \
		 common.h \
		 app.h \
		 app.cpp \
		 dlgbase.h \
		 dlgbase.cpp \
		 hierdetailview.h \
		 hierdetailview.cpp \
		 elemdetrp.h \
		 elemdetrp.cpp \
		 elemcomprp.h \
		 elemcomprp.cpp \
		 vertcrp.h \
		 vertcrp.cpp \
		 vertdrp.h \
		 vertdrp.cpp \
		 edgecrp.h \
		 edgecrp.cpp \
		 syscrp.h \
		 syscrp.cpp \
		 sysdrp.h \
		 sysdrp.cpp \
		 cpcrp.h \
		 cpcrp.cpp \
		 extdcrp.h \
		 extdcrp.cpp \
		 propcrp.h \
		 propcrp.cpp \
		 toolitems.h \
		 toolitems.cpp \
		 logview.h \
		 logview.cpp \
		 mprov.h \
		 provdef.h \
		 provdef.cpp \
		 stenv.h \
		 stenv.cpp \
		 navi.h \
		 navi.cpp \
		 incapsdrp.h \
		 incapsdrp.cpp \
		 incapscrp.h \
		 incapscrp.cpp \
		 datacrp.h \
		 datacrp.cpp \
		 dessync.h \
		 dessync.cpp \
		 mdlprov.h \
		 mdlprov.cpp \
		 mainwnd.h \
		 mainwnd.cpp




